; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_diff.c_print_git_diff_header_copied.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_diff.c_print_git_diff_header_copied.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [23 x i8] c"diff --git a/%s b/%s%s\00", align 1
@APR_EOL_STR = common dso_local global i32 0, align 4
@SVN_INVALID_REVNUM = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [19 x i8] c"copy from %s@%ld%s\00", align 1
@.str.2 = private unnamed_addr constant [15 x i8] c"copy from %s%s\00", align 1
@.str.3 = private unnamed_addr constant [13 x i8] c"copy to %s%s\00", align 1
@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i8*, i8*, i32, i8*, i32*)* @print_git_diff_header_copied to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @print_git_diff_header_copied(i32* %0, i8* %1, i8* %2, i32 %3, i8* %4, i32* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  store i32* %0, i32** %7, align 8
  store i8* %1, i8** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store i8* %4, i8** %11, align 8
  store i32* %5, i32** %12, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = load i8*, i8** %8, align 8
  %15 = load i32*, i32** %12, align 8
  %16 = load i8*, i8** %9, align 8
  %17 = load i8*, i8** %11, align 8
  %18 = load i32, i32* @APR_EOL_STR, align 4
  %19 = call i32 (i32*, i8*, i32*, i8*, i8*, i8*, ...) @svn_stream_printf_from_utf8(i32* %13, i8* %14, i32* %15, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i8* %16, i8* %17, i32 %18)
  %20 = call i32 @SVN_ERR(i32 %19)
  %21 = load i32, i32* %10, align 4
  %22 = load i32, i32* @SVN_INVALID_REVNUM, align 4
  %23 = icmp ne i32 %21, %22
  br i1 %23, label %24, label %35

24:                                               ; preds = %6
  %25 = load i32*, i32** %7, align 8
  %26 = load i8*, i8** %8, align 8
  %27 = load i32*, i32** %12, align 8
  %28 = load i8*, i8** %9, align 8
  %29 = load i32, i32* %10, align 4
  %30 = sext i32 %29 to i64
  %31 = inttoptr i64 %30 to i8*
  %32 = load i32, i32* @APR_EOL_STR, align 4
  %33 = call i32 (i32*, i8*, i32*, i8*, i8*, i8*, ...) @svn_stream_printf_from_utf8(i32* %25, i8* %26, i32* %27, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), i8* %28, i8* %31, i32 %32)
  %34 = call i32 @SVN_ERR(i32 %33)
  br label %45

35:                                               ; preds = %6
  %36 = load i32*, i32** %7, align 8
  %37 = load i8*, i8** %8, align 8
  %38 = load i32*, i32** %12, align 8
  %39 = load i8*, i8** %9, align 8
  %40 = load i32, i32* @APR_EOL_STR, align 4
  %41 = sext i32 %40 to i64
  %42 = inttoptr i64 %41 to i8*
  %43 = call i32 (i32*, i8*, i32*, i8*, i8*, i8*, ...) @svn_stream_printf_from_utf8(i32* %36, i8* %37, i32* %38, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0), i8* %39, i8* %42)
  %44 = call i32 @SVN_ERR(i32 %43)
  br label %45

45:                                               ; preds = %35, %24
  %46 = load i32*, i32** %7, align 8
  %47 = load i8*, i8** %8, align 8
  %48 = load i32*, i32** %12, align 8
  %49 = load i8*, i8** %11, align 8
  %50 = load i32, i32* @APR_EOL_STR, align 4
  %51 = sext i32 %50 to i64
  %52 = inttoptr i64 %51 to i8*
  %53 = call i32 (i32*, i8*, i32*, i8*, i8*, i8*, ...) @svn_stream_printf_from_utf8(i32* %46, i8* %47, i32* %48, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.3, i64 0, i64 0), i8* %49, i8* %52)
  %54 = call i32 @SVN_ERR(i32 %53)
  %55 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %55
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_stream_printf_from_utf8(i32*, i8*, i32*, i8*, i8*, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
